como resolvi a issue 4 pensando que tava sendo pedido o que tá pedido nessa issue 11 kkk, resolvi a issue 4 agora fácil fácil acrescendo um td{text-align: center;}

--- a/semana2/bugfixes/dia4-aula8/index.css
+++ b/semana2/bugfixes/dia4-aula8/index.css
@@ -113,6 +113,10 @@ table {
     margin: 0 auto;
 }
 
+td {
+    text-align: center;
+}
+
 
 td button {
     background-color: #fadf63;
